--- a/NetAccess/NetAccess.csproj
+++ b/NetAccess/NetAccess.csproj
@@ -31,10 +31,26 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>packages\RestSharp.105.2.3\lib\net45\RestSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\netaccess-infiauth\netaccess\netaccess\LibNetAccess.cs">
+      <Link>LibNetAccess.cs</Link>
+    </Compile>
+    <Compile Include="..\netaccess-infiauth\netaccess\netaccess\RestSharpExtensions.cs">
+      <Link>RestSharpExtensions.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
